# llmforge

./: Dockerfile  docker-compose.yml  env  pyproject.toml
docker/: Dockerfile
notebooks/: 07_dataset.ipynb  gpu_test.ipynb
src/llmforge/: AUTHOR  __init__.py
